--- a/frames/series.html
+++ b/frames/series.html
@@ -29,6 +29,7 @@
             var subtitles = require('../js/subtitle.js');
             var favorites = require('../js/favorites.js');
             var settings = require('../js/settings.js');
+            settings.initConfig();
             var translations = require('../js/translations.js');
             var dateFormat = require('dateformat');
             var readTorrent = require('read-torrent');
